--- a/html/index.html
+++ b/html/index.html
@@ -156,7 +156,7 @@
 
 			console.log(route);
 
-			var params = `username=${USERNAME}&password=${PASSWORD}&sourceip=${route.SourceIP}&internalip=${route.DestinationIP}&externalport=${route.ExternalPort}&internalport=${route.InternalPort}`;
+			var params = `username=${USERNAME}&password=${PASSWORD}&client=${route.Client}&sourceip=${route.SourceIP}&internalip=${route.DestinationIP}&externalport=${route.ExternalPort}&internalport=${route.InternalPort}`;
 
 			var xhr = new XMLHttpRequest();
 			var delErrorElement = document.getElementById("deleteRouteError");
@@ -205,6 +205,21 @@
 
 			var fragment = create(html);
 			document.getElementById("routes").appendChild(fragment);
+		}
+
+		function showAllRoutes(route, index) {
+			var html =
+				`<div class="grey-field">
+									<p style="display:inline">
+									${route.Client}: ${route.SourceIP} -> ${route.ExternalPort}:${route.DestinationIP}:${route.InternalPort}
+									</p>
+									<div class="delete-button" onclick="deleteRoute(${index});">
+									-
+									</div>
+						</div>`
+
+			var fragment = create(html);
+			document.getElementById("routes-all").appendChild(fragment);
 		}
 
 		function addRoute(form) {
@@ -263,6 +278,7 @@
 			document.getElementById("mapform").setAttribute("hidden", "true");
 			document.getElementById("login-form").removeAttribute("hidden");
 			document.getElementById("logout-form").setAttribute("hidden", "true");
+			document.getElementById("route-float-all").setAttribute("hidden", "true");
 			return false;
 		}
 
@@ -271,7 +287,6 @@
 
 			var xhr = new XMLHttpRequest();
 			xhr.open('POST', "/list", false);
-
 
 			xhr.setRequestHeader("Content-type", "application/x-www-form-urlencoded");
 			xhr.send(params);
@@ -285,9 +300,31 @@
 				node.removeChild(node.lastChild);
 			}
 
-			for (var i = 0; i < routes.length; i++) {
-				showRoute(routes[i], i);
+			var nodesAll = document.getElementById("routes-all");
+			while (nodesAll.hasChildNodes()) {
+				nodesAll.removeChild(nodesAll.lastChild);
 			}
+
+			for (var i = 0; i < routes.length; i++) {
+				if (routes[i].Client == "") {
+					showRoute(routes[i], i);
+				} else {
+					showAllRoutes(routes[i], i);
+				}
+			}
+		}
+
+		function deleteAllRoutes() {
+			var params = `username=${USERNAME}&password=${PASSWORD}`;
+
+			var xhr = new XMLHttpRequest();
+			xhr.open('POST', "/deleteAll", false);
+			xhr.setRequestHeader("Content-type", "application/x-www-form-urlencoded");
+			xhr.send(params);
+			console.log(xhr.responseText);
+
+			refresh();
+			return false;
 		}
 
 		function getPorts() {
@@ -338,26 +375,36 @@
 				"application/x-www-form-urlencoded");
 			http.onreadystatechange = function() {
 				if (http.readyState == 4 && http.status == 200) {
-					if (http.responseText == "OK") {
-						USERNAME = username;
-						PASSWORD = password;
-						document.getElementById("login-form").setAttribute("hidden",
-							"true");
-						document.getElementById("route-float").removeAttribute("hidden");
-						document.getElementById("logout-form").removeAttribute("hidden");
-						document.getElementById("mapform").removeAttribute("hidden");
-						console.log("Auth success");
-						refresh();
-					} else if (http.responseText == "ERROR AUTH") {
-						console.log("Auth failed");
-						document.getElementById("authFail").removeAttribute("hidden");
-						document.getElementById("authFail").innerHTML = map[http.responseText];
+					switch (http.responseText) {
+						case "ADMIN":
+							document.getElementById("route-float-all").removeAttribute("hidden");
+						case "OK":
+							USERNAME = username;
+							PASSWORD = password;
+							document.getElementById("login-form").setAttribute("hidden", "true");
+							document.getElementById("route-float").removeAttribute("hidden");
+							document.getElementById("logout-form").removeAttribute("hidden");
+							document.getElementById("mapform").removeAttribute("hidden");
+							console.log("Auth success");
+							refresh();
+							break;
+					 	case "ERROR AUTH":
+							console.log("Auth failed");
+							document.getElementById("authFail").removeAttribute("hidden");
+							document.getElementById("authFail").innerHTML = map[http.responseText];
+							break;
+						default:
+							console.log("Auth error unspecified")
+							document.getElementById("authFail").removeAttribute("hidden");
+							document.getElementById("authFail").innerHTML = "Unspecified error";
+							break;
 					}
 				}
 			}
 			http.send(params);
 			return false;
 		}
+
 	</script>
 
 	<div class="login-page">
@@ -378,7 +425,6 @@
 			<label hidden="true" class="errorMessage" id="deleteRouteError" for></label>
 		</div>
 
-
 		<form action="#" onsubmit="return addRoute(this);" id="mapform" hidden="true">
 			<label hidden="true" class="errorMessage" id="addRouteError" for></label>
 			<input type="text" name="internalip" placeholder="Internal IP" title="Internal IP Address: X . X . X . X"
@@ -390,9 +436,17 @@
 			</select>
 			<button type="submit">Add</button>
 		</form>
-
 		<form action="#" onsubmit="return logoutForm(this);" hidden="true" id="logout-form">
 			<button type="submit">LOGOUT</button>
+		</form>
+
+		<form class="white-boxed" onsubmit="return deleteAllRoutes(this);" id="route-float-all" hidden="true">
+			Current Routes for All Users:
+			<br/>
+			<label hidden="true" class="errorMessage" id="deleteRouteError" for></label>
+			<div id="routes-all">
+			</div>
+			<button type="submit">Delete All</button>
 		</form>
 
 	</div>
